[gd_scene load_steps=4 format=3 uid="uid://ruvu2y6bah7y"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_puiyl"]
[ext_resource type="PackedScene" uid="uid://dn3mk5frqfbtg" path="res://scenes/objects/gate.tscn" id="3_n5cb2"]
[ext_resource type="PackedScene" uid="uid://v8534yevfl1q" path="res://scenes/player/player.tscn" id="4_uxikk"]

[node name="Level" type="Node2D"]
script = ExtResource("1_puiyl")

[node name="Gate" parent="." instance=ExtResource("3_n5cb2")]

[node name="Player" parent="." instance=ExtResource("4_uxikk")]
position = Vector2(1082, 278)
scale = Vector2(0.5, 0.5)

[node name="Projectiles" type="Node2D" parent="."]

[connection signal="player_entered_gate" from="Gate" to="." method="_on_gate_player_entered_gate"]
[connection signal="grenade_sig" from="Player" to="." method="_on_player_grenade_sig"]
[connection signal="laser_sig" from="Player" to="." method="_on_player_laser_sig"]
